[policy-change] Require two committer approvals
Bug: 350501622
Change-Id: Ie3355fb9dacd501b3855dc319082de69d6c4e8cc
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/5672133
Reviewed-by: Joey Scarr <jsca@google.com>
Reviewed-by: Michael Achenbach <machenbach@chromium.org>

--- a/project.config
+++ b/project.config
@@ -3,7 +3,6 @@
 [submit]
 	action = rebase always
 	mergeContent = true
-
 [label "Code-Review"]
 	value = -1 Don't submit as-is
 	value = 0 No score
@@ -29,7 +28,6 @@
 	function = NoBlock
 	defaultValue = 0
 	copyCondition = changekind:NO_CHANGE
-
 [access "refs/for/*"]
 	push = group Logged-in Public Users
 	create = group Logged-in Public Users
@@ -57,7 +55,6 @@
 	forgeCommitter = group v8-committers
 	abandon = group v8-committers
 	label-Owners-Override = +0..+1 group cria/project-v8-sheriffs
-
 [access "refs/tags/*"]
 	create = group v8-autoroll
 	create = group v8-ci-pgo-builder
@@ -91,7 +88,6 @@
 	submit = group v8-scoped@luci-project-accounts.iam.gserviceaccount.com
 	label-Owners-Override = +0..+1 group cria/project-v8-sheriffs
 	abandon = group v8-committers
-
 [access "refs/heads/lkgr"]
 	create = group v8-autoroll
 	forgeAuthor = group v8-autoroll
@@ -211,8 +207,8 @@
 	rejectSymlink = false
 	rejectWindowsLineEndings = false
 [submit-requirement "Code-Review"]
-	description = Submit requirement for the 'Code-Review' label
-	submittableIf = label:Code-Review=MAX,user=non_uploader -label:Code-Review=MIN
+	description = If the author is a V8 committer, code review is required from one other committer (see https://v8.dev/docs/become-committer). Otherwise, code review is required from two committers.
+	submittableIf = ((uploaderin:cria/project-v8-committers AND label:Code-Review=MAX,user=non_uploader) OR label:Code-Review=MAX,count>=2) AND -label:Code-Review=MIN
 	overrideIf = label:Bot-Commit=+1 AND -label:Code-Review=MIN
 	canOverrideInChildProjects = true
 [submit-requirement "Verified"]
